fix: id:45098 right childrens alignment in header

--- a/src/components/AppBar/AppBar.scss
+++ b/src/components/AppBar/AppBar.scss
@@ -7,4 +7,7 @@
   top: 0;
   z-index: 400;
 }
-
+.rChild {
+  margin-left: auto;
+  display: flex;
+}
