--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -31,8 +31,6 @@
 
 .loginContainer {
  // @include floatRight(8px, 12px);
-  //justify-self: flex-end;
-  position: absolute;
-    right: 12px;
-    top: 8px;
+  justify-content: flex-end;
+  margin-left: auto;
 }
